# Tek2-Project

./: README.md
Assembleur/MiniLibC/: Makefile
C++/Arcade/: Makefile  main.cpp  pac_map.txt
C++/Malloc/: Makefile
C++/NanoTekSpice/: Makefile  (+5 more)
Jeux/IndieStudio/: CMakeLists.txt  azure-pipelines.yml  compile.sh
Jeux/IndieStudio/cmake/: FindIrrlicht.cmake
Jeux/IndieStudio/documentation/: mapDoc.txt
Jeux/IndieStudio/gameSave/: map.txt
Jeux/IndieStudio/resources/Game/BreakWall/: breakWall.dae
Jeux/IndieStudio/resources/Game/Grenade/: Grenade.dae
Jeux/IndieStudio/resources/Game/Ground/: Ground.dae
Jeux/IndieStudio/resources/Game/PowerUp/: FirePowerUP.dae  GrenadePowerUP.dae  SpeedPowerUp.dae
Jeux/IndieStudio/resources/Game/UnbreakWall/: unbreakWall.dae
Jeux/IndieStudio/src/: config.h  config.h.in  main.cpp
Jeux/IndieStudio/src/core/: Clock.cpp  Clock.hpp  Core.cpp  Core.hpp  Error.hpp
Jeux/IndieStudio/src/data/: IndieStudioData.hpp
Jeux/IndieStudio/src/endGame/: GameOver.cpp  GameOver.hpp
Jeux/IndieStudio/src/event/: Event.cpp  Event.hpp
Jeux/IndieStudio/src/game/: Bomb.cpp  Bomb.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  Item.cpp  Item.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp
Jeux/IndieStudio/src/inGameMenu/: Pause.cpp  Pause.hpp
Jeux/IndieStudio/src/menu/: Menu.cpp  Menu.hpp
Jeux/IndieStudio/src/option/: Option.cpp  Option.hpp
Jeux/IndieStudio/src/save/: Save.cpp  Save.hpp
Jeux/IndieStudio/src/scene/: IScene.hpp  Scene.cpp  Scene.hpp
Jeux/IndieStudio/src/selectMenu/: SelectMenu.cpp  SelectMenu.hpp
Jeux/IndieStudio/src/sound/: Sound.cpp  Sound.hpp
Jeux/IndieStudio/src/splashScreen/: SplashScreen.cpp  SplashScreen.hpp
(+459 files in other folders)
